# sbe-codegen

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yaml  rust.yaml
examples/python/tests/: conftest.py  test_car.py
examples/python/tests/static/: example_schema_car.json
examples/rust/tests/: test_example_schema.rs
src/: main.rs
src/generator/: common.rs  mod.rs
src/generator/python/: constants.rs  mod.rs  module.rs  typing.rs
src/generator/python/codecs/: composite_type.rs  enum_type.rs  group_type.rs  message_type.rs  mod.rs  set_type.rs
src/generator/rust/: constants.rs  decoder.rs  encoder.rs  error.rs  mod.rs  module.rs
src/generator/rust/codecs/: enum_type.rs  mod.rs  set_type.rs
src/generator/rust/codecs/composite_type/: decoder.rs  encoder.rs  mod.rs
src/generator/rust/codecs/group_type/: decoder.rs  encoder.rs  mod.rs
src/generator/rust/codecs/message_type/: decoder.rs  encoder.rs  mod.rs
src/generator/rust/codecs/var_data_type/: decoder.rs  encoder.rs  mod.rs
src/models/: constants.rs  message.rs  mod.rs  schema.rs
src/models/types/: composite_type.rs  encoded_data_type.rs  enum_type.rs  field_type.rs  group_type.rs  mod.rs  primitive_type.rs  reference_type.rs  set_type.rs  variable_data_type.rs
